Add evaluator implementation
